
Regina - A Normal Surface Theory Calculator

    This file gives a detailed list of changes between releases,
    including all changes to the C++/Python API.

    For just the key highlights, see the (far more readable) file
    HIGHLIGHTS.txt.

Version 7.4  [ (to be announced) ]

    GENERAL:
        - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
    ENGINE:
        Class BitManipulator<T>:
            - New routine swapBits().
        Class IntOfBits<k>:
            - New type alias to simplify arithmetic when using IntOfSize<...>.
        Class Face<dim, dim-1>:
            - New routines lock(), unlock(), and isLocked().
        Class Link:
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Packet:
            - New inner type alias ChangeEventGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
        Class PacketData<Held>:
            - New inner type alias ChangeEventGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
            - The inner ChangeEventSpan class has a new member function held().
        Class Simplex<dim>:
            - New routines lock(), lockFacet(), unlock(), unlockFacet(),
              unlockAll(), isLocked(), isFacetLocked(), and lockMask().
        Class Triangulation<dim>:
            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.  The old Triangulation<3>::reorderTetrahedraBFS()