@@ -10,6 +10,12 @@ Regina - A Normal Surface Theory Calculator
 Version 7.4  [ (to be announced) ]
 
     GENERAL:
+        - Added support for simplex and facet locks throughout the API.  See
+          Simplex<dim>::lock() and Simplex<dim>::lockFacet() for an overview
+          of how locks work.  Many routines throughout the API could now
+          potentially throw a LockViolation (and this is now explicitly noted
+          in their respective docs); other routines now examine locks as part
+          of their validity checks (e.g., local moves on triangulations).
         - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
     ENGINE:
         Class BitManipulator<T>:
@@ -31,6 +37,9 @@ Version 7.4  [ (to be announced) ]
             - New inner type alias ChangeEventGroup, to assist with readability
               when using a ChangeEventSpan for optimisation purposes only.
             - The inner ChangeEventSpan class has a new member function held().
+        Class SatAnnulus:
+            - Routine attachLST() now checks its preconditions, and throws
+              an exception if they fail.
         Class Simplex<dim>:
             - New routines lock(), lockFacet(), unlock(), unlockFacet(),
               unlockAll(), isLocked(), isFacetLocked(), and lockMask().
